--- a/01_MainPageCSS.css
+++ b/01_MainPageCSS.css
@@ -1,12 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap');
-@media screen and (max-width: 2278px) {
-    body {
-        zoom: 67%;
-        font-size: smaller;
-        padding: 10px;
-    }
-}
+
+
 body {
     background: rgb(5, 5, 5);
     font-family: Oswald;
@@ -70,7 +65,9 @@ hr {
 .buttons {
     background: none;    
     color: white;
-    margin: 5px 175px 0px 175px;
+    margin: 0px auto 0px auto;
+    min-width: 30px;
+    padding: 5px 30px 0 30px;
     font-size: 45px;
     border: 1px solid white;
     border-style: solid solid none solid;
@@ -106,4 +103,33 @@ a {
 }
 .buttons :active {
     color: darkblue;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+@media screen and (max-width: 2278px) {
+    body {
+        zoom: 50%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    body {
+        zoom: 50%;
+    }
+    .shapka {
+        width: 640px;
+    }
+    .buttons {
+        border: 2px solid white;
+        padding: 0;
+        margin: 1px;
+        display: flex;
+        flex-direction: column;
+        width: 470px;
+    }
 }
