--- a/02_Info.css
+++ b/02_Info.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap');
-@media screen and (max-width: 2278px) {
-    body {zoom: 67%;}
-}
+
 body {
     background: rgb(5, 5, 5);
     font-family: Oswald;
@@ -14,7 +12,7 @@ s {
 }
 
 hr {
-    width: 2250px;
+    width: auto;
     size: 1px;
     margin: auto;
     max-width: 2270px;
@@ -56,8 +54,8 @@ p {
 .we {
     /* transform: translate(475px,0px); */
     margin: 15px auto;
-    display: block;
     width: 1300px;
+    display: block;
 }
 #con1 {
     background: none;    
@@ -71,7 +69,8 @@ p {
 .buttons {
     background: none;    
     color: white;
-    margin: 5px 175px 0px 175px;
+    margin: 5px 135px 0px 180px;
+    padding: 5px 30px 0 30px;
     font-size: 45px;
     border: 1px solid white;
     border-style: solid solid none solid;
@@ -84,4 +83,43 @@ p {
 }
 .buttons :active {
     color: darkblue;
+}
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+@media screen and (max-width: 2278px) {
+    body {
+        zoom: 50%;
+    }
+    .we {
+        margin: auto;
+        width: 1300px;
+        display: flex;
+     }
+}
+
+@media screen and (max-width: 320px) {
+    body {
+        zoom: 50%;
+    }
+    .shapka {
+        width: 640px;
+    }
+
+    .Units p {
+        margin: 2px;
+    }
+    .buttons {
+        border: 2px solid white;
+        padding: 0;
+        margin: 1px;
+        display: flex;
+        flex-direction: column;
+        width: 470px;
+    }
+    .we {
+        width: 640px;
+    }
 }
