--- a/04_Merch.css
+++ b/04_Merch.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap');
-@media screen and (max-width: 2278px) {
-    body {zoom: 67%;}
-}
+
 body {
     background: rgb(5, 5, 5);
     font-family: Oswald;
@@ -74,4 +72,28 @@ a {
 }
 .buttons :active {
     color: darkblue;
+}
+
+@media screen and (max-width: 2278px) {
+    body {
+        zoom: 50%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    body {
+        zoom: 50%;
+        max-height: 100%;
+    }
+    .shapka {
+        width: 640px;
+    }
+    .buttons {
+        border: 2px solid white;
+        padding: 0;
+        margin: 1px;
+        display: flex;
+        flex-direction: column;
+        width: 470px;
+    }
 }
