--- a/01_MainPageCSS.css
+++ b/01_MainPageCSS.css
@@ -65,8 +65,7 @@ hr {
 .buttons {
     background: none;    
     color: white;
-    margin: 0px auto 0px auto;
-    min-width: 30px;
+    margin: 5px 135px 0px 179px;
     padding: 5px 30px 0 30px;
     font-size: 45px;
     border: 1px solid white;
